--- a/LP_Avancement.tex
+++ b/LP_Avancement.tex
@@ -42,7 +42,7 @@
 \hline
   \textbf{Ondes progressives, ondes stationnaires} p\pageref{LP_OndesProgressives}~& \textcolor{green}{vitesse de l'onde dans un câble coaxial} & \textcolor{orange}{\textbf{40\%}} & Faire partie onde progressive et onde stationnaire \\
   \hline
-  \textbf{Ondes acoustiques} p\pageref{LP_OndeAcoustique}~& ?? Mesure $c_{air}$ piézo ?? & \textcolor{red}{\textbf{0\%}} &  \\
+  \textbf{Ondes acoustiques} p\pageref{LP_OndeAcoustique}~& \textcolor{green}{Mesure $c_{air}$ piézo} & \textcolor{red}{\textbf{0\%}} &  \\
   \hline
   \textbf{Propagation guidée des ondes} p\pageref{LP_PropagationGuidee} & \textcolor{green}{Quali : piezo + tube}, \textcolor{green}{Quanti : guide d'onde centi}& \textcolor{green}{\textbf{80\%}} & Ouverture à finir + Pertes et ROS à regarder. \\
   \hline
@@ -52,11 +52,11 @@
   \hline
   \textbf{Interférométrie à division d'amplitude} p\pageref{LP_DivisionAmplitude} & \textcolor{green}{Michelson : doublet sodium} & \textcolor{green}{\textbf{100\%}} & A revoir vite fait coin d'air \\
   \hline
-  \textbf{Diffraction de Fraunhofer} p\pageref{LP_DiffractionFraunhofer} & \textcolor{green}{Diffraction par une fente+CCD-MHTEX} \textcolor{red}{Filtrage spatial} & \textcolor{orange}{\textbf{30\%}} &  \\
+  \textbf{Diffraction de Fraunhofer} p\pageref{LP_DiffractionFraunhofer} & \textcolor{green}{Diffraction par une fente+CCD-MHTEX} \textcolor{green}{Filtrage spatial} & \textcolor{orange}{\textbf{30\%}} &  \\
   \hline
-  \textbf{Diffraction par des structures périodiques} p\pageref{LP_DiffractionPeriodique} & \textcolor{red}{Diffraction par un réseau} & \textcolor{red}{\textbf{0\%}} &  \\
+  \textbf{Diffraction par des structures périodiques} p\pageref{LP_DiffractionPeriodique} & \textcolor{green}{Mesures raies mercure par un réseau} & \textcolor{red}{\textbf{0\%}} &  \\
   \hline
-  \textbf{Absorption et émission de la lumière} p\pageref{LP_Absorption} & \textcolor{green}{Emission/absorption rhodamine} \textcolor{red}{Spectre emission lampe à vapeur de mercure + réseau} & \textcolor{red}{\textbf{0\%}} & Leçon Elric pas mal \\
+  \textbf{Absorption et émission de la lumière} p\pageref{LP_Absorption} & \textcolor{green}{Emission/absorption rhodamine} \textcolor{green}{Spectre emission lampe à vapeur de mercure + réseau} & \textcolor{red}{\textbf{0\%}} & Leçon Elric pas mal \\
   \hline
   \hline
   \textbf{Propriétés macroscopiques des corps ferromagnétiques } p\pageref{LP_Ferromagnetisme} & \textcolor{green}{Cycle hystérésis transfo} & \textcolor{green}{\textbf{90\%}} & Mettre en relief appli ferro durs/doux + démo confinement lignes de champ slides \\
@@ -70,7 +70,7 @@
   \hline
   \textbf{Cinématique relativiste. Expérience de Michelson et Morley} p\pageref{LP_CinematiqueRelativiste} & \textcolor{red}{logiciel Gum\_MC, exp Frish et Smith} & \textcolor{red}{\textbf{20\%}} & Plan ok, manip à bosser  \\
   \hline
-  \textbf{Effet tunnel : application à la radioactivité alpha} & \textcolor{green}{Simulation site colorado}& \textcolor{green}{\textbf{80\%}} & Faire tableau avec $T_{1/2}$ et E. Interprétation $T_{1/2}$ avec particule à travailler. \\
+  \textbf{Effet tunnel : application à la radioactivité alpha} & \textcolor{green}{Simulation site colorado} & \textcolor{green}{\textbf{80\%}} & Faire tableau avec $T_{1/2}$ et E. Interprétation $T_{1/2}$ avec particule à travailler. \\
   \hline
 \end{tabularx}
 \end{center}
