--- a/LP_CinematiqueRelativiste.tex
+++ b/LP_CinematiqueRelativiste.tex
@@ -30,6 +30,14 @@
 \end{tabularx}
 \end{center}
 
+\begin{reportBlock}{Commentaires des années précédentes :}
+    \begin{itemize}
+        \item \textbf{2016 :} Les notions d’événement et d’invariant sont incontournables dans cette leçon,
+        \item \textbf{2015 :} Le jury rappelle qu’il n’est pas forcément nécessaire de mettre en œuvre des vitesses relativistes pour être capable de détecter et de mesurer des effets relativistes,
+        \item \textbf{2014 :} Cette leçon exige une grande rigueur dans l’exposé tant sur les notions fondamentales de relativité restreinte que sur les référentiels en jeu. Elle invite les candidats à faire preuve d’une grande pédagogie pour présenter des notions a priori non intuitives et faire ressortir les limites de l’approche classique. Un exposé clair des notions d’invariant relativiste est attendu.
+    \end{itemize}
+\end{reportBlock}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{reportBlock}{Plan détaillé}
   \textbf{Niveau choisi pour la leçon :} L3
@@ -37,7 +45,7 @@
   \textbf{Prérequis : }
   \newline
 
-\section*{}
+\section*{Introduction}
 
 \section{Emergence de la relativité restreinte}
 
