--- a/LP_ConversionPuissance.tex
+++ b/LP_ConversionPuissance.tex
@@ -23,6 +23,15 @@
 \end{tabularx}
 \end{center}
 
+\begin{reportBlock}{Commentaires des années précédentes :}
+    \begin{itemize}
+        \item \textbf{2017 :} Une approche à l’aide des seules forces de Laplace est insuffisante. Les candidats doivent aussi s’interroger sur l’intérêt d’utiliser des matériaux ferromagnétiques dans les machines électriques,
+        \item \textbf{2016 :} Afin de pouvoir aborder des machines électriques de forte puissance, le rôle essentiel du fer doit être considéré car les forces électromagnétiques ne se réduisent pas aux seules actions de Laplace s’exerçant sur les conducteurs traversés par des courants,
+        \item \textbf{2015 :} Il est souhaitable de préciser le rôle de l’énergie magnétique lors de l’étude des convertisseurs électromécaniques constitués de matériaux ferromagnétiques linéaires non saturés,
+        \item Dans le cas des machines électriques, les candidats sont invités à réfléchir au rôle du fer dans les actions électromagnétiques qui peuvent également être déterminées par dérivation d’une grandeur énergétique par rapport à un paramètre de position.
+    \end{itemize}
+\end{reportBlock}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{reportBlock}{Plan détaillé}
   \textbf{Niveau choisi pour la leçon :} 
