--- a/LP_DiffractionFraunhofer/LP_DiffractionFraunhofer.tex
+++ b/LP_DiffractionFraunhofer/LP_DiffractionFraunhofer.tex
@@ -23,7 +23,12 @@
 \end{center}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\begin{reportBlock}{Commentaires des années précédentes :}
+    \begin{itemize}
+        \item \textbf{2017 :} Les conditions de Fraunhofer et leurs conséquences doivent être présentées, ainsi que le lien entre les dimensions caractéristiques d’un objet diffractant et celles de sa figure de diffraction,
+        \item \textbf{2014-2011 :} Les conditions de l’approximation de Fraunhofer doivent être clairement énoncées. Pour autant, elles ne constituent pas le coeur de la leçon.
+    \end{itemize}
+\end{reportBlock}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%% Plan
 \begin{reportBlock}{Plan détaillé}
