--- a/LP_DivisionAmplitude/LPO3_Division_Amplitude.tex
+++ b/LP_DivisionAmplitude/LPO3_Division_Amplitude.tex
@@ -26,6 +26,15 @@
 \end{tabularx}
 \end{center}
 
+\begin{reportBlock}{Commentaires des années précédentes :}
+    \begin{itemize}
+        \item \textbf{2017 :} Le candidat doit réfléchir aux conséquences du mode d’éclairage de l’interféromètre (source étendue, faisceau parallèle ou non...). Il est judicieux de ne pas se limiter à l’exemple de l’interféromètre de Michelson,
+        \item \textbf{2016 :} La distinction entre divisions du front d’onde et d’amplitude doit être précise. Le jury rappelle que l’utilisation d’une lame semi-réfléchissante ne conduit pas nécessairement à une division d’amplitude,
+        \item \textbf{2015 :} Les notions de cohérence doivent être présentées,
+        \item \textbf{2014 :} Un interféromètre comportant une lame séparatrice n’est pas obligatoirement utilisé en diviseur d’amplitude. La notion de cohérence et ses limites doivent être discutées
+    \end{itemize}
+\end{reportBlock}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%% Plan
