--- a/LP_EffetTunnel.tex
+++ b/LP_EffetTunnel.tex
@@ -22,9 +22,18 @@
   \hline
   \url{https://cahier-de-prepa.fr/pc*-poincare/download?id=1007} & & & \\
   \hline
+  \url{https://phet.colorado.edu/sims/cheerpj/quantum-tunneling/latest/quantum-tunneling.html?simulation=quantum-tunneling} & colorado.edu & Université du Colorado & \\
+  \hline
 \end{tabularx}
 \end{center}
 
+\begin{reportBlock}{Commentaires des années précédentes :}
+    \begin{itemize}
+        \item \textbf{2017 :} Encore une fois, il ne s’agit pas de se limiter à des calculs. L’exposé doit présenter l’analyse d’applications pertinentes,
+        \item \textbf{2015 :} Trop de candidats pensent que l’effet tunnel est spécifique à la physique quantique,
+        \item \textbf{2013-2011 :} Dans le traitement de l’effet tunnel, les candidats perdent souvent trop de temps dans les calculs. Le jury invite les candidats à réfléchir à une présentation à la fois complète et concise sans oublier les commentaires physiques relatifs à la dérivation de la probabilité de transmission. Certains candidats choisissent d’aborder le cas de la désintégration alpha mais ne détaillent malheureusement pas le lien entre la probabilité de traversée d’une barrière et la durée de demi-vie de l’élément considéré. La justification des conditions aux limites est essentielle ! Le microscope à effet tunnel peut être un bon exemple d’application s’il est analysé avec soin (hauteur de la barrière, origine de la résolution transverse, ...).
+    \end{itemize}
+\end{reportBlock}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{reportBlock}{Plan détaillé}
   \textbf{Niveau choisi pour la leçon :} 
