--- a/LP_Ferromagnetisme/LP_Ferromagnetisme.tex
+++ b/LP_Ferromagnetisme/LP_Ferromagnetisme.tex
@@ -29,7 +29,13 @@
 \end{center}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\begin{reportBlock}{Commentaires des années précédentes :}
+    \begin{itemize}
+        \item \textbf{2017 :} L’introduction des milieux linéaires en début de leçon n’est pas judicieuse,
+        \item \textbf{2016 :} Un bilan de puissance soigné est attendu,
+        \item \textbf{2010-2009 : }L’intérêt du champ H doit être clairement dégagé. L’obtention expérimentale du cycle d’hystérésis doit être analysée.
+    \end{itemize}
+\end{reportBlock}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%% Plan
 \begin{reportBlock}{Plan détaillé}
