--- a/LP_Gravitation/LP_Gravitation.tex
+++ b/LP_Gravitation/LP_Gravitation.tex
@@ -28,6 +28,14 @@ La physique par la pratique    & B. Portelli et J. Barthes   &  H\&K (2005) &   
 \end{tabularx}
 \end{center}
 
+\begin{reportBlock}{Commentaires des années précédentes :}
+    \begin{itemize}
+        \item \textbf{2017 :} Les applications ne doivent pas nécessairement se limiter à la gravitation terrestre,
+        \item \textbf{2016 :} Les analogies entre l’électromagnétisme et la gravitation classique présentent des
+limites qu’il est pertinent de souligner
+    \end{itemize}
+\end{reportBlock}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
