--- a/LP_Induction.tex
+++ b/LP_Induction.tex
@@ -23,6 +23,12 @@
 \end{tabularx}
 \end{center}
 
+\begin{reportBlock}{Commentaires des années précédentes :}
+    \begin{itemize}
+        \item \textbf{2015 :} L’algébrisation rigoureuse des grandeurs électriques et mécaniques est nécessaire lors de la paramétrisation,
+        \item \textbf{2014 :} Dans cette leçon, le plus grand soin s’impose dans la définition des orientations et des conventions de signe. Les applications doivent occuper une place significative dans la présentation. Il n’est pas admissible à ce niveau de confondre les forces de Lorentz et de Laplace.
+    \end{itemize}
+\end{reportBlock}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
