--- a/LP_InterferencesDeuxOndes.tex
+++ b/LP_InterferencesDeuxOndes.tex
@@ -27,6 +27,13 @@ Physique Spé MP-MP* & Olivier, Gié, Sarmant & Tec \& Doc & \\
 \end{tabularx}
 \end{center}
 
+\begin{reportBlock}{Commentaires des années précédentes :}
+    \begin{itemize}
+        \item \textbf{2016 :} Les approximations mises en oeuvre dans les calculs de différence de marche doivent être justifiées a priori,
+        \item \textbf{2015 :} L’exposé doit permettre de préciser clairement les contraintes particulières que l’optique impose aux dispositifs interférentiels par rapport à d’autres domaines,
+        \item \textbf{2014 :} Un interféromètre comportant une lame séparatrice n’est pas obligatoirement utilisé en diviseur d’amplitude. La notion de cohérence et ses limites doivent être discutées
+    \end{itemize}
+\end{reportBlock}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{reportBlock}{Plan détaillé}
   \textbf{Niveau choisi pour la leçon :} CPGE
