--- a/LP_LoideConservation.tex
+++ b/LP_LoideConservation.tex
@@ -21,6 +21,14 @@
 \end{tabularx}
 \end{center}
 
+\begin{reportBlock}{Commentaires des années précédentes :}
+    \begin{itemize}
+        \item \textbf{2017 :} Des exemples concrets d’utilisation des lois de conservation sont attendus,
+        \item \textbf{2016 :} Lors de l’entretien avec le jury, la discussion peut aborder d’autres domaines que celui de la mécanique classique,
+        \item \textbf{2015 :} Cette leçon peut être traitée à des niveaux très divers. L’intérêt fondamental des lois de conservation et leur origine doivent être connus et la leçon ne doit pas se limiter à une succession d’applications au cours desquelles les lois de conservation se résument à une propriété anecdotique du problème considéré.
+    \end{itemize}
+\end{reportBlock}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{reportBlock}{Plan détaillé}
   \textbf{Niveau choisi pour la leçon :} CPGE 2ème année
