--- a/LP_Microscopie/LP_Microscospie.tex
+++ b/LP_Microscopie/LP_Microscospie.tex
@@ -31,7 +31,13 @@
 \end{center}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\begin{reportBlock}{Commentaires des années précédentes :}
+    \begin{itemize}
+        \item \textbf{2017 :} L’intérêt des notions introduites doit être souligné,
+        \item \textbf{2016 :} Une technique récente de microscopie optique à haute résolution doit être présentée,
+        \item \textbf{2010 :} La propagation guidée ne concerne pas les seules ondes électromagnétiques ou optiques. Il faut insister sur les conditions aux limites introduites par le dispositif de guidage.
+    \end{itemize}
+\end{reportBlock}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%% Plan
 \begin{reportBlock}{Plan détaillé}
