--- a/LP_OndesProgressives/LP_OndeProgressive.tex
+++ b/LP_OndesProgressives/LP_OndeProgressive.tex
@@ -29,6 +29,13 @@
 \end{tabularx}
 \end{center}
 
+\begin{reportBlock}{Commentaires des années précédentes :}
+    \begin{itemize}
+        \item \textbf{2015 :} Les candidats doivent être attentifs à bien équilibrer leur exposé entre ces deux familles d’ondes qui, d’ailleurs, ne s’excluent pas entre elles,
+        \item \textbf{2014 :} À l’occasion de cette leçon, le jury tient à rappeler une évidence : avec un tel titre, la leçon doit être équilibrée et ne peut en aucun cas se limiter pour l’essentiel aux ondes progressives.
+    \end{itemize}
+\end{reportBlock}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
