--- a/LP_PhenomenesTransport.tex
+++ b/LP_PhenomenesTransport.tex
@@ -25,6 +25,15 @@
 \end{tabularx}
 \end{center}
 
+\begin{reportBlock}{Commentaires des années précédentes :}
+    \begin{itemize}
+        \item \textbf{2017 :} La leçon ne peut se limiter à la présentation d’un unique phénomène de transport
+        \item \textbf{2016 :} Les analogies et différences entre les phénomènes de transport doivent être soulignées tout en évitant de dresser un simple catalogue,
+        \item \textbf{2015 :} Les liens et les limites des analogies entre divers domaines doivent être connus
+    \end{itemize}
+\end{reportBlock}
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{reportBlock}{Plan détaillé}
   \textbf{Niveau choisi pour la leçon :} Prépa deuxième année
