--- a/LP_PortaitPhase/LP_PortaitPhase.tex
+++ b/LP_PortaitPhase/LP_PortaitPhase.tex
@@ -25,7 +25,13 @@
 \end{center}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\begin{reportBlock}{Commentaires des années précédentes :}
+    \begin{itemize}
+        \item \textbf{2017 :} Les définitions d’un oscillateur et d’un portrait de phase sont attendues. La leçon doit présenter des systèmes comportant des non-linéarités,
+        \item \textbf{2015 :} L’intérêt de l’utilisation des portraits de phase doit ressortir de la leçon,
+        \item \textbf{2013 :} Les aspects non-linéaires doivent être abordés dans cette leçon sans développement calculatoire excessif, en utilisant judicieusement la notion de portrait de phase. Une simulation numérique bien présentée peut enrichir cette leçon.
+    \end{itemize}
+\end{reportBlock}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%% Plan
 \begin{reportBlock}{Plan détaillé}
