--- a/LP_PremierPrincipe.tex
+++ b/LP_PremierPrincipe.tex
@@ -28,7 +28,13 @@
 \end{tabularx}
 \end{center}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{reportBlock}{Commentaires des années précédentes :}
+    \begin{itemize}
+        \item \textbf{2017 :} Des exemples concrets d’utilisation du premier principe de la thermodynamique sont attendus,
+        \item \textbf{2016 :} La notion d’équilibre thermodynamique n’est pas toujours bien comprise. Des exemples pertinents doivent être utilisés pour mettre en exergue l’intérêt du premier principe, y compris pour l’introduire
+        \item \textbf{2015 :} Cette leçon peut être traitée à des niveaux très divers. L’intérêt fondamental des lois de conservation et leur origine doivent être connus et la leçon ne doit pas se limiter à une succession d’applications au cours desquelles les lois de conservation se résument à une propriété anecdotique du problème considéré.
+    \end{itemize}
+\end{reportBlock}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%% Plan
