--- a/LP_PropagationGuidee.tex
+++ b/LP_PropagationGuidee.tex
@@ -27,7 +27,13 @@
 \end{center}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\begin{reportBlock}{Commentaires des années précédentes :}
+    \begin{itemize}
+        \item \textbf{2014 :} Les candidats doivent avoir réfléchi à la notion de vitesse de groupe et à son cadre d’utilisation,
+        \item \textbf{2013 :} Les notions de modes et de fréquence de coupure doivent être exposées. On peut envisager d’autres ondes que les ondes électromagnétiques,
+        \item \textbf{2010 :} La propagation guidée ne concerne pas les seules ondes électromagnétiques ou optiques. Il faut insister sur les conditions aux limites introduites par le dispositif de guidage.
+    \end{itemize}
+\end{reportBlock}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%% Plan
 \begin{reportBlock}{Plan détaillé}
