--- a/LP_Resonance/LP_Resonance.tex
+++ b/LP_Resonance/LP_Resonance.tex
@@ -5,9 +5,6 @@
   \label{LP_resonance} 
 \end{headerBlock}
 
-
-
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%% Références
 \begin{center}
@@ -27,7 +24,12 @@
 \end{center}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\begin{reportBlock}{Commentaires des années précédentes :}
+    \begin{itemize}
+        \item \textbf{2015 :}Présenter l’exemple célèbre du pont de Tacoma n’est pas pertinent, sauf s’il s’agit d’effectuer une critique d’une interprétation erronée très répandue,
+        \item \textbf{2010 :} L’analyse du seul circuit RLC est très insuffisante pour cette leçon. Le phénomène de résonance ne se limite pas aux oscillateurs à un degré de liberté.
+    \end{itemize}
+\end{reportBlock}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%% Plan
 \begin{reportBlock}{Plan détaillé}
@@ -37,7 +39,7 @@
   \textbf{Prérequis} : \begin{itemize}
       \item Mécanique newtonienne
       \item Optique ondulatoire
-      \item 
+      \item Electrocinétique
   \end{itemize}
 
   \textbf{Déroulé détaillé de la leçon: }  
