--- a/LP_RetroactionOscillation.tex
+++ b/LP_RetroactionOscillation.tex
@@ -28,6 +28,12 @@
 \end{tabularx}
 \end{center}
 
+\begin{reportBlock}{Commentaires des années précédentes :}
+    \begin{itemize}
+        \item \textbf{2015 :} Dans le cas des oscillateurs auto-entretenus, les conditions d’apparition des oscillations et la limitation de leur amplitude doivent être discutées. Le jury souhaiterait que le terme de résonance soit dûment justifié sans oublier une discussion du facteur de qualité. Il n’est pas indispensable de se restreindre à l’électronique,
+        \item \textbf{2013 :} Le jury n’attend pas une présentation générale et abstraite de la notion de système bouclé.
+    \end{itemize}
+\end{reportBlock}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
