--- a/LP_TensionSurface/LPF3_Tension_surface.tex
+++ b/LP_TensionSurface/LPF3_Tension_surface.tex
@@ -29,6 +29,11 @@ Notes de cours sur les fluides (2019-2020) & Marc Rabaud  &  Site agreg Montroug
 \end{tabularx}
 \end{center}
 
+\begin{reportBlock}{Commentaires des années précédentes :}
+    \begin{itemize}
+        \item \textbf{2014 :} Le lien avec les potentiels thermodynamiques n’est pas souvent maîtrisé. Il est important de dégager clairement l’origine microscopique de la tension superficielle. Le jury constate que trop souvent les candidats présentent des schémas où la représentation des interactions remet en cause la stabilité mécanique de l’interface. Le jury apprécie les exposés dans lesquels le/la candidat(e) ne se limite pas à la statique.
+    \end{itemize}
+\end{reportBlock}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
