--- a/LP_TraitementSignal/LP_TraitementSignal.tex
+++ b/LP_TraitementSignal/LP_TraitementSignal.tex
@@ -27,6 +27,14 @@
 \end{tabularx}
 \end{center}
 
+\begin{reportBlock}{Commentaires des années précédentes :}
+    \begin{itemize}
+        \item \textbf{2017 :} Ce n’est pas une leçon sur le filtrage qui est attendue ; il ne faut pas se réduire à l’étude d’un ou plusieurs filtres électroniques,
+        \item \textbf{2016 :} Cette leçon ne peut en aucun cas se réduire à la simple étude de la théorie de Fourier,
+        \item \textbf{2015 :} Cette leçon ne doit pas se réduire à un catalogue de systèmes de traitement analogique du signal. Elle peut aussi mettre en exergue des méthodes numériques enseignées notamment dans les programmes de CPGE, 
+    \end{itemize}
+\end{reportBlock}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{reportBlock}{Plan détaillé}
   \textbf{Niveau choisi pour la leçon :} CPGE deuxième année
