--- a/LP_TransitionPhase.tex
+++ b/LP_TransitionPhase.tex
@@ -26,6 +26,13 @@
 \end{tabularx}
 \end{center}
 
+\begin{reportBlock}{Commentaires des années précédentes :}
+    \begin{itemize}
+        \item \textbf{2015 :} Il est dommage de réduire cette leçon aux seuls changements d’états solide-liquide-vapeur. La discussion de la transition liquide-vapeur peut être l’occasion de discuter du point critique et de faire des analogies avec la transition ferromagnétique-paramagnétique. La notion d’universalité est rarement connue ou comprise,
+        \item \textbf{2014 :} Il n’y a pas lieu de limiter cette leçon au cas des changements d’état solide-liquide-vapeur. D’autres transitions de phase peuvent être discutées.
+    \end{itemize}
+\end{reportBlock}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
