--- a/LP_Viscosite.tex
+++ b/LP_Viscosite.tex
@@ -38,8 +38,15 @@
   \item cinématiques des fluides
       \item loi de l'hydrostatique, poussée d'Archimède
       \item diffusion
-      
   \end{itemize}
+
+  \begin{reportBlock}{Commentaires des années précédentes :}
+    \begin{itemize}
+        \item \textbf{2017 :} Il peut être judicieux de présenter le fonctionnement d’un viscosimètre dans cette leçon,
+        \item \textbf{2016 :} Le jury invite les candidats à réfléchir d’avantage à l’origine des actions de contact mises en jeu entre un fluide et un solide,
+        \item \textbf{2014, 2013, 2012, 2011 :} L’exemple de l’écoulement de Poiseuille cylindrique n’est pas celui dont les conclusions sont les plus riches. Les candidats doivent avoir réfléchi aux différents mécanismes de dissipation qui peuvent avoir lieu dans un fluide. L’essentiel de l’exposé doit porter sur les fluides newtoniens : le cas des fluides non newtoniens, s’il peut être brièvement mentionné ou résenté, ne doit pas prendre trop de temps et faire perdre de vue le message principal.
+    \end{itemize}
+\end{reportBlock}
 
   \textbf{Déroulé détaillé de la leçon: }  
   
