--- a/LP_EcoulementsParfaits/LP_EcoulementParfait.tex
+++ b/LP_EcoulementsParfaits/LP_EcoulementParfait.tex
@@ -25,6 +25,15 @@
 \end{tabularx}
 \end{center}
 
+\begin{reportBlock}{Commentaires des années précédentes :}
+    \begin{itemize}
+        \item \textbf{2017 :} La multiplication des expériences illustrant le théorème de Bernoulli n’est pas souhaitable, surtout si celles-ci ne sont pas correctement explicitées,
+        \item \textbf{2016 :} Les limites de ce modèle sont souvent méconnues,
+        \item \textbf{2015 :} Le jury invite les candidats à réfléchir davantage à l’interprétation de la portance et de l’effet Magnus. Les exemples cités doivent être correctement traités, une présentation superficielle de ceux-ci n’étant pas satisfaisante,
+        \item \textbf{2014 2013, 2012, 2011 :} La notion de viscosité peut être supposée acquise.
+    \end{itemize}
+\end{reportBlock}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{reportBlock}{Plan détaillé}
   \textbf{Niveau choisi pour la leçon :} CPGE 2ème année
