--- a/Leçon_chimie/LC_SPCL/LC_Electrolyse_SPCL.tex
+++ b/Leçon_chimie/LC_SPCL/LC_Electrolyse_SPCL.tex
@@ -48,19 +48,70 @@ Titre & Auteur(s) & Editeur (année) & ISBN \\ \hline
 \paragraph*{Objectifs}
 
 \begin{itemize}
-\item 
+\item 4 premiers points du BO
 \end{itemize}
 
 \paragraph*{Difficultés}
 
 \begin{itemize}
-\item 
+\item Identification des électrodes
+\item Sens de déplacement des ions et des électrons
+\item Difficultés calculatoires : décomposer les étapes de calculs
+\item st\oe chiométrie des équations
 \end{itemize}
 
 \section*{Introduction}
+On a vu dans un cours précédent que des réactions sont spontanées : rouille du fer, dépot vert dans les canalisations. Peut-on faire la réaction inverse ?\\
+\textcolor{blue}{Expérience introductive :} tube en U avec des ions cuivres 2+, du solide Cu(s) se forme sur une électrode. C'est ce qu'on appelle un électrolyseur. On va essayer de comprendre comment ça marche.
 
-\section{}
+\section{L'électrolyseur}
+\subsection{Principe}
+Schéma de l'expérience précédente. L'électrolyte est du sulfate de cuivre CuSO$_4^{2-}$, les électrodes sont en graphite. Les électrons se déplacent dans le sens opposé au courant.
+\importantbox{Le générateur impose le sens du courant et donc le sens de déplacement des électrons.}
+
+\subsection{Equations aux électrodes}
+\underline{\textbf{Electrode connectée à la borne -}} : arrivée d'électrons, on a réductions des ions cuivres : c'est \textcolor{green}{la cathode}.\\
+
+\underline{\textbf{Electrode connectée à la borne +}} : on a oxydation de l'eau : 2H$_2$O $\rightarrow$ 4H$^+$ + O$_2$ + 4e$^-$ : c'est \textcolor{green}{l'anode}.\\
+
+On appelle transformation chimique \textbf{forcée} une transformation qui a lieu dans le sens opposé au sens thermodynamiquement favorisé.\\
+
+L'équation de la réaction de l'électrolyse s'écrit : 
+\begin{equation}
+blabla
+\end{equation}
+
+\section{Bilan de matière sur un électrolyseur}
+\subsection{Conservation de l'électricité}
+La quantité d'électricité traversant un circuit électrique est :
+\begin{equation}
+    Q = I\Delta t
+\end{equation}
+Q peut aussi être liée à la quantité d'électrons échangés :
+\begin{equation}
+    Q = n_{e^-}F
+\end{equation}
+avec F=96500C.mol$^{-1}$ la constante de Faraday.\\
+
+Application : $Cu^{2+}+2e^- \rightarrow Cu(s)$ donne $n_{Cu}=\frac{I\Delta t}{2F}$ et pour I=0.1A pendant 10min donne $m_{Cu}=30mg$.
+
+\subsection{Rendement de l'électrolyse}
+Le rendement de l'électrolyse est donné par :
+\begin{equation}
+    \eta = \frac{m_{cu,expérimental}}{m_{Cu,theorique}}
+\end{equation}
+\begin{itemize}
+    \item $\eta=0$, pas effective,
+    \item $\eta=1$, rendement maximal.
+\end{itemize}
+
+\section{Application : purification}
+Dans l'industrie, on utilise une électrolyse à anode soluble pour purifier les minerais. Le minerai pas pur en cuivre va être soumis à un potentiel et va libérer le cuivre qui va se déposer sur une électrode plus pure. Schéma de l'expérience.\\
+
+\textcolor{blue}{Manipulation quantitative :} on impose $I$ avec un générateur sur deux électrodes de cuivre. Le courant à t=0 vaut 470mA mais se stabilise à 470mA au bout de 2 minutes. On observe une couleur saumon sur la cathode qui vient du dépot de cuivre. On rince la cathode à l'eau distillée. On sèche délicatement (le dépot est fragile). On sèche au décapeur thermique.\\
+
+Calcul du rendement, propagation d'incertitude.
 
 \section*{Conclusion} 
-
+Utilité : synthèse de l'eau de javel, synthèse de dihydrogène pour la pile à combustible, électrozingage.
 \end{reportBlock}
